# byteperm

./: Cargo.toml  README.md
benches/: my_benchmark.rs
src/: .lib.rs.swp  lib.rs  prime.rs
